[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "uniformers"
description = "Universal Coded Character Set Transformers for Language Modelling"
readme = "README.md"
keywords = [
  "Deep Learning",
  "Language Models",
  "Transformers",
  "Character-Level",
  "Tokenization-Free",
  "Natural Language Processing",
  "Natural Language Generation",
  "Poetry Generation",
]
license = {text = "Apache-2.0 License"}
dependencies = [
  "datasets~=2.3",
  "numpy~=1.26.3",
  "tokenizers~=0.19.0",
  "torch>=1.11",
  "zstandard~=0.17",
  "transformers==4.43.3",
  "lxml~=4.9",
  "sacremoses~=0.0.53",
  "optuna~=2.10",
  "libarchive-c~=4.0",
  "scikit-learn~=1.1",
  # quickfix, official pypi package doesn't work yet for python > 3.7
  "ipapy @ https://github.com/ionite34/ipapy/archive/4fedf540a68b998ddd982c05f113d40aa4f3f97f.zip"
]
requires-python = ">=3.10"
dynamic = ["version"]

[project.urls]
repository = "https://github.com/potamides/uniformers"

[project.optional-dependencies]
examples = [
  "termcolor~=1.1"
]
mt5 = [
  "protobuf",
  "sentencepiece"
]

[tool.setuptools_scm]
write_to = "uniformers/_version.py"
parentdir_prefix_version = "uniformers-"

[tool.setuptools.packages.find]
include = ["uniformers*"]
